# Master-Thesis

./: Draw_matlab.py  Drone_class(agent_inside_20180508).py  Drone_class.py  README.md  test_quadrotor(noagent_inside_20180508).py  test_quadrotor.py
Grid_RL_cylinder4_rectangle1_wall1/: test_cylinder4_rectangle1_wall1_RL_LSTM_grid.py  train_cylinder4_rectangle1_wall1_RL_LSTM_grid.py
Grid_RL_cylinder4_rectangle1_wall1/model_one_step/: checkpoint  model-1000.cptk.index  model-1500.cptk.index  model-2000.cptk.index  model-2500.cptk.index  model-3000.cptk.index  model-3500.cptk.index  model-4000.cptk.index  model-4500.cptk.index  model-500.cptk.index  model-5000.cptk.index  model-5500.cptk.index  model-6000.cptk.index  model-6500.cptk.index  model-7000.cptk.index  model-7500.cptk.index  model-8000.cptk.index  model-8500.cptk.index  model-9000.cptk.index
Grid_RL_cylinder4_rectangle1_wall1/train_0/: events.out.tfevents.1538683088.lhsu
Grid_RL_cylinder4_rectangle1_wall1/train_1/: events.out.tfevents.1538683076.lhsu
Grid_RL_cylinder4_rectangle1_wall1/train_2/: events.out.tfevents.1538683085.lhsu
Grid_RL_cylinder4_rectangle1_wall1/train_3/: events.out.tfevents.1538683093.lhsu
Grid_RL_cylinder4_rectangle1_wall1/train_4/: events.out.tfevents.1538683091.lhsu
Grid_RL_cylinder4_rectangle1_wall1/train_5/: events.out.tfevents.1538683088.lhsu
Grid_RL_cylinder4_rectangle1_wall1/train_6/: events.out.tfevents.1538683084.lhsu
Grid_RL_cylinder4_rectangle1_wall1/train_7/: events.out.tfevents.1538683090.lhsu
Grid_SL_cylinder4_rectangle1_wall1/: train_combined_4k.py
Grid_SL_cylinder4_rectangle1_wall1/model_checkpoint/: checkpoint  model-620000.cptk.index  model-630000.cptk.index
bebop_vicon_ctrl/: CMakeLists.txt  README.md  package.xml
bebop_vicon_ctrl/launch/: bebop_control.launch  bebop_pid_keyboard.launch
bebop_vicon_ctrl/src/: autonomous_landing.py  bebop_api_client.py  bebop_api_server.py  bebop_controller.py  bebop_geofence.py  play_sounds.py  teleop_twist_keyboard.py  test-sounds.py  test_api.py  update_goal_keyboard (origin).py  update_goal_keyboard.py
bebop_vicon_ctrl/srv/: FlyTo.srv
envs/: __init__.py
envs/curriculum_envs/: __init__.py  big_env_1.py  curriculum_env_diverse_obst.py  cylinder_different_sizes(Draw_matlab).py  cylinder_different_sizes.py  cylinder_different_sizes2.py  cylinder_different_sizes_20180511.py  cylinder_env.py  cylinder_multiple_obs_env.py  planner_complex_map1.py  planner_complex_map3.py  planner_complex_map3_continuous.py  planner_wall_map1.py  (+19 more)
globalplan_record/: CMakeLists.txt  package.xml
lidar/: CMakeLists.txt  package.xml
turtlebot_flatland/: CMakeLists.txt  LICENSE  README.md  package.xml
turtlebot_flatland/launch/: turtlebot_in_flatland.launch
turtlebot_flatland/maps/: cylinder_map2.yaml  cylinder_map3.yaml  door.model.yaml  hospital_section.world.yaml  hospital_section.yaml  map_current.yaml  rectangle_map2.yaml  table.model.yaml
turtlebot_flatland/robot/: turtlebot.model (origin).yaml  turtlebot.model.yaml
turtlebot_flatland/rviz/: robot_navigation (origin).rviz  robot_navigation.rviz
(+16 files in other folders)
